--- a/html/slider.html
+++ b/html/slider.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-    <link rel="stylesheet" href="/Users/sirishaepari/Desktop/LocaleFinder/css/slider.css">
+    <link rel="stylesheet" href="../css/slider.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   </head>
@@ -51,6 +51,6 @@
       </section>
     </div>
   </div>
-  <script type="text/javascript" src = "/Users/sirishaepari/Desktop/LocaleFinder/js/slider.js"></script>
+  <script type="text/javascript" src = "../js/slider.js"></script>
   </body>
 </html>
