--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-        <title>Local Finder</title>
+        <title>Locale Finder</title>
     <link rel="stylesheet" type="text/css" href="project.css">
     <!--start add by rachel-->
     <link rel="stylesheet/less" type="text/css" href="less/index.less" />
@@ -108,37 +108,38 @@ footer{
         <div id="descr">
            <h1>SEATTLE</h1>
            <P>Seattle, a city on Puget Sound in the Pacific Northwest,
-             is surrounded by water, mountains and evergreen forests,
-             and contains thousands of acres of parkland.
-             Washington State’s largest city, it’s home to a large tech industry,
+             is surrounded by water, mountains and evergreen forests.
+             It contains thousands of acres of parkland.
+             Being the largest city of Washington, it is home to a large tech industry,
              with Microsoft and Amazon headquartered in its metropolitan area.
              The futuristic Space Needle, a 1962 World’s Fair legacy, is its most iconic landmark.
            </P>
            <p>
-             Local Finder is your advisor who will help you find the right place for you to live in.
-             You can know about the information like crime, school, transportation etc. in a area,
-             and compare them base on these information.
-             Even if you are unfarmiliar with the city, we can give you advices.
+             Locale Finder is your advisor who will help you find the right place for you to live.
+             You will know about the crime rate,rating of the schools in that neighborhood, transportation and more in every neighborhood.
+             You can also compare different neighborhoods based on this information.
+             If you are new to the city, just go to our suggestions page and we will suggest you the places we picked based on
+               low crime rate, good rated schools and public transportation.  <!-- This content is subject to change later. This is temporary(-Rashmitha) -->
            </p>
         </div>
         <div id="start"> <button id="startbtn"><span>GET START</span></button></div>
         <div id="features">
            <div id="suggestion">
-              <p>If you want to find a neighborhood in Seattle and have no idea about which area is your favorite one.
-              we can give you suggestions bese on the feedback to our short survey.
+              <p>Want to find a neighborhood in Seattle and have no idea which one will be your favorite?
+              Don't worry! It's so simple...Just go ahead and answer our questionnaire and we will help you out in a jiffy.
               </p>
               <button id="suggesbtn">GET ADVICE</button>
            </div>
            <div id="find">
-              <P>If you want to know more detail about a neignborhood, this is the right place.
-              You will find all the neighbohoods in Seattle
-              and pick up the one you want to know.
-              </P>
+              <P>Want to find information regarding each and every neighborhood in Seattle? You have come to the right place.
+                  Just click on the button below and you'll find all the information you want.
+              
+               </P>
               <button id="findbtn">FIND A LOCAL</button>
            </div>
            <div id="comparation">
-             <P>If you are in favor of a couple of neighbohoods and want to know more infomation about them, step into this way.
-                This section will give you a comparable view of you favorite areas.
+             <P>You are already familiar with few neighbohoods and not knowing which one to choose? Let us make this job much easier for you.
+                 Click on the button below to compare any two neighborhoods.
              </P>
              <button id="compbtn">COMPARE LOCAL</button>
            </div>
