Add class and value to each button

--- a/html/slider.html
+++ b/html/slider.html
@@ -18,36 +18,44 @@
       <div class="slider">
         <h1>What activities you like to do ?</h1>
         <section class= "options">
-           <button class= "selector"> activity1 </button>
-           <button class= "selector"> activity2 </button>
-           <button class= "selector"> activity3 </button>
-           <button class= "selector"> N/A </button>
+          <!--Modified by rachel-->
+          <button class= "q1 selector" value="Hiking"> activity1 </button>
+          <button class= "q1 selector" value="Swimming"> activity2 </button>
+          <button class= "q1 selector" value="Travelling"> activity3 </button>
+          <button class= "q1 selector" value="NA"> N/A </button>
+          <!--end-->
         </section>
       </div>
       <div class="slider">
          <h1>Do you have kids ?</h1>
          <section class= "options">
-           <button class= "selector">YES</button>
-           <button class= "selector">NO </button>
-           <button class= "selector"> N/A </button>
+            <!--Modified by rachel-->
+           <button class= "q2 selector" value="YES">YES</button>
+           <button class= "q2 selector" value="NO">NO </button>
+           <button class= "q2 selector" value="NA"> N/A </button>
+            <!--end-->
          </section>
       </div>
     <div class="slider">
      <h1>Select your income range ?</h1>
      <section class= "options">
-       <button class= "selector"> income1 </button>
-       <button class= "selector"> income2 </button>
-       <button class= "selector"> income3 </button>
-       <button class= "selector"> N/A </button>
+        <!--Modified by rachel-->
+       <button class= "q3 selector" value="10-50"> income1 </button>
+       <button class= "q3 selector" value="50-100"> income2 </button>
+       <button class= "q3 selector" value="100-150"> income3 </button>
+       <button class= "q3 selector" value="NA"> N/A </button>
+        <!--end-->
      </section>
     </div>
     <div class="slider">
       <h1> How often you use public transportion ?</h1>
       <section class= "options">
-         <button class= "selector"> option1 </button>
-         <button class= "selector"> option2 </button>
-         <button class= "selector"> option3 </button>
-         <button class= "selector"> N/A </button>
+         <!--Modified by rachel-->
+         <button class= "q4 selector" value="DAILY"> option1 </button>
+         <button class= "q4 selector" value="ONCE A WEEK"> option2 </button>
+         <button class= "q4 selector" value="FEW DAYS IN A WEEK"> option3 </button>
+         <button class= "q4 selector" value="NA"> N/A </button>
+         <!--end-->
       </section>
     </div>
   </div>
