changed image path in mainpage.html

--- a/html/mainpage.html
+++ b/html/mainpage.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
         <title>project</title>
-    <link rel="stylesheet" type="text/css" href="./css/mainpage.css">
+    <link rel="stylesheet" type="text/css" href="../css/mainpage.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="#"></script>   
     
@@ -35,7 +35,7 @@ footer{
                     <a href="#">Find</a>
                 </div>
                 </li>
-                <li><img src="logo-1.jpg" width="110" height="auto"></li>
+                <li><img src="../image/logo-1.jpg" width="110" height="auto"></li>
                 <li><a href="#"><b>Locale Finder</b></a></li>
             </ul>
         </nav> 
