modified footer by removing about us

--- a/html/mainpage.html
+++ b/html/mainpage.html
@@ -49,7 +49,7 @@ footer{
     </div>
         
     <footer>
-    <p>About us:</p>    
+    <!--<p>About us:</p>-->   
     <p>Copyright &copy; </p>  
     </footer>
     </body>
