Edited footer and more...
- Commented "About us" in Footer
- Edited button NAMES and
-  commented one GET STARTED button as there are 2.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ footer{
         </nav> 
     </header>    
     <h2>Discover Your Locale  </h2>
-    <button class="b-quesiotn"><h2>GET STARTED</h2></button>
+    <!--<button class="b-quesiotn"><h2>GET STARTED</h2></button> -->
     <!--start add by rachel-->
     <div id="main">
         <div id="descr">
@@ -122,32 +122,32 @@ footer{
                low crime rate, good rated schools and public transportation.  <!-- This content is subject to change later. This is temporary(-Rashmitha) -->
            </p>
         </div>
-        <div id="start"> <button id="startbtn"><span>GET START</span></button></div>
+        <div id="start"> <button id="startbtn"><span>GET STARTED</span></button></div>
         <div id="features">
            <div id="suggestion">
               <p>Want to find a neighborhood in Seattle and have no idea which one will be your favorite?
               Don't worry! It's so simple...Just go ahead and answer our questionnaire and we will help you out in a jiffy.
               </p>
-              <button id="suggesbtn">GET ADVICE</button>
+              <button id="suggesbtn">SUGGEST ME</button>
            </div>
            <div id="find">
               <P>Want to find information regarding each and every neighborhood in Seattle? You have come to the right place.
                   Just click on the button below and you'll find all the information you want.
               
                </P>
-              <button id="findbtn">FIND A LOCAL</button>
+              <button id="findbtn">FIND A NEIGHBORHOOD</button>
            </div>
            <div id="comparation">
              <P>You are already familiar with few neighbohoods and not knowing which one to choose? Let us make this job much easier for you.
                  Click on the button below to compare any two neighborhoods.
              </P>
-             <button id="compbtn">COMPARE LOCAL</button>
+             <button id="compbtn">COMPARE NEIGHBORHOODS</button>
            </div>
         </div>
       </div>
      <!--end add by rachel-->   
     <footer>
-    <p>About us:</p>    
+    <!--<p>About us:</p>-->   
     <p>Copyright &copy; </p>  
     </footer>
     <!--start add by rachel-->   
