--- a/index.html
+++ b/index.html
@@ -131,26 +131,24 @@
         <!--start modified by neha-->
         <div id="features">
             <div id="features-suggestion" class="feature">
-                <p>Want to find a neighborhood in Seattle and have no idea which one will be your favorite? Don't worry! It's so simple...Just go ahead and answer our questionnaire and we will help you out in a jiffy.
+                <p>Want to find a neighborhood in Seattle and have no idea which one will be your favorite? Don't worry! It's so simple...Just go ahead and answer our questionnaire and we will help you out in a jiffy.<!--text & button Name modified by Rashmitha -->
                 </p>
-                <button class="indexPageAction">GET ADVICE</button>
+                <button class="indexPageAction">SUGGEST ME</button>
             </div>
             <div id="features-find" class="feature">
-                <P>Want to find information regarding each and every neighborhood in Seattle? You have come to the right place. Just click on the button below and you'll find all the information you want.
+                <P>Want to find information regarding each and every neighborhood in Seattle? You have come to the right place. Just click on the button below and you'll find all the information you want.<!--text & button Name modified by Rashmitha -->
                 </P>
-                <button class="indexPageAction">FIND A LOCAL</button>
+                <button class="indexPageAction">FIND A NEIGHBORHOOD</button>
             </div>
             <div id="features-comparation" class="feature">
-                <P>You are already familiar with few neighbohoods and not knowing which one to choose? Let us make this job much easier for you. Click on the button below to compare any two neighborhoods.
+                <P>You are already familiar with few neighbohoods and not knowing which one to choose? Let us make this job much easier for you. Click on the button below to compare any two neighborhoods.<!--text & button Name modified by Rashmitha -->
                 </P>
-                <button class="indexPageAction">COMPARE LOCAL</button>
+                <button class="indexPageAction">COMPARE NEIGHBORHOODS</button>
             </div>
             <!--end modified by neha-->
         </div>
         <!--end add by rachel-->
         <footer>
-            <p>About us:</p>
-            <p>Copyright &copy; </p>
             <!--<p>About us:</p>-->
             <p>Copyright &copy; </p>
         </footer>
