Linked SuggestionsPage to its respective button

--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
             <div id="features-suggestion" class="feature">
                 <p>Want to find a neighborhood in Seattle and have no idea which one will be your favorite? Don't worry! It's so simple...Just go ahead and answer our questionnaire and we will help you out in a jiffy.<!--text & button Name modified by Rashmitha -->
                 </p>
+                <a href = "html/SuggestionsPage.html">   <!-- added by rashmitha-->
                 <button class="indexPageAction">SUGGEST ME</button>
+                </a>
             </div>
             <div id="features-find" class="feature">
                 <P>Want to find information regarding each and every neighborhood in Seattle? You have come to the right place. Just click on the button below and you'll find all the information you want.<!--text & button Name modified by Rashmitha -->
