--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div id="features-suggestion" class="feature">
                 <p>Want to find a neighborhood in Seattle and have no idea which one will be your favorite? Don't worry! It's so simple...Just go ahead and answer our questionnaire and we will help you out in a jiffy.<!--text & button Name modified by Rashmitha -->
                 </p>
-                <a href = "html/SuggestionsPage.html">   <!-- added by rashmitha-->
+                <a href = "html/slider.html">   <!-- added by rashmitha-->
                 <button class="indexPageAction">SUGGEST ME</button>
                 </a>
             </div>
