--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Our Suggestions</title>
-	<link rel="stylesheet" type="text/css" href="SuggestionsPage.css">
+    <title>Our Suggestions</title>
+    <link rel="stylesheet" type="text/css" href="../css/suggestionsPage.css">
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
 </head>
+
 <body>
-<div id = "suggestions">
-<h2 class = "suggestions"> OUR SUGGESTIONS</h2>
-</div>
-<div id = "crime">
-<h4 class = "suggestions"> Crime Rate</h4>
-</div>
-<div id = "schools">
-<h4 class = "schools">Schools & their Rating</h4>
-</div>
-<div id = "grocery">
-<h4 class = "grocery"> Grocery Stores</h4>
-</div>
-<div id = "transport">
-<h4 class = "transport">Public Transport</h4>
-</div>
-<div id = "income">
-<h4 class = "income"> Average Income</h4>
-</div>
-<div id = "houses">
-<h4 class = "houses">Average Prices Of Houses</h4>
-</div>
-<!--<script src="less.js" type="text/javascript"></script>-->
+	<div>  <h2 class="suggestions">OUR SUGGESTIONS</h2> </div>
+    <div id='suggestedArea'>      
+    </div>
+    <script type="text/javascript" src="../js/suggestions.js"></script>
 </body>
+
 </html>
