--- a/html/slider.html
+++ b/html/slider.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Questionaire</title>
     <link rel="stylesheet" href="../css/slider.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -18,14 +18,15 @@
       <div class="slider">
         <h1>What activities you like to do ?</h1>
         <section class= "options">
-          <!--Modified by rachel-->
-          <button class= "q1 selector" value="Hiking"> activity1 </button>
-          <button class= "q1 selector" value="Swimming"> activity2 </button>
-          <button class= "q1 selector" value="Travelling"> activity3 </button>
+          <!--Modified by rachel--><!-- Start Modified by neha-->
+          <button class= "q1 selector" value="Hiking">Hiking</button>
+          <button class= "q1 selector" value="Swimming">Swimming</button>
+          <button class= "q1 selector" value="Travelling">Travelling</button>
           <button class= "q1 selector" value="NA"> N/A </button>
           <!--end-->
         </section>
       </div>
+
       <div class="slider">
          <h1>Do you have kids ?</h1>
          <section class= "options">
@@ -40,9 +41,9 @@
      <h1>Select your income range ?</h1>
      <section class= "options">
         <!--Modified by rachel-->
-       <button class= "q3 selector" value="10-50"> income1 </button>
-       <button class= "q3 selector" value="50-100"> income2 </button>
-       <button class= "q3 selector" value="100-150"> income3 </button>
+       <button class= "q3 selector" value="10-50">10-50</button>
+       <button class= "q3 selector" value="50-100">50-100</button>
+       <button class= "q3 selector" value="100-150">100-150</button>
        <button class= "q3 selector" value="NA"> N/A </button>
         <!--end-->
      </section>
@@ -51,14 +52,23 @@
       <h1> How often you use public transportion ?</h1>
       <section class= "options">
          <!--Modified by rachel-->
-         <button class= "q4 selector" value="DAILY"> option1 </button>
-         <button class= "q4 selector" value="ONCE A WEEK"> option2 </button>
-         <button class= "q4 selector" value="FEW DAYS IN A WEEK"> option3 </button>
+         <button class= "q4 selector" value="DAILY">DAILY</button>
+         <button class= "q4 selector" value="ONCE A WEEK">ONCE A WEEK</button>
+         <button class= "q4 selector" value="FEW DAYS IN A WEEK">FEW DAYS IN A WEEK</button>
          <button class= "q4 selector" value="NA"> N/A </button>
          <!--end-->
       </section>
     </div>
+    <!-- end Modified by neha-->
+    <!--start add by neha-->
+    <div class="slider">
+      <h1> Do you want to submit?</h1>
+      <section class= "options">
+        <a href="./suggestionsPage.html"><button class= "submit selector" value="submit">SUBMIT</button>
+      </section>
+    </div>
   </div>
+  <!--end add by neha-->
   <script type="text/javascript" src = "../js/slider.js"></script>
   </body>
 </html>
