--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
             </p>
         </div>
         <div id="start">
-            <button id="startbtn" class="indexPageAction"><span>GET STARTED</span></button>
+            <!--start modified by neha-->
+            <a href="./html/slider.html"><button id="startbtn" class="indexPageAction"><span>GET STARTED</span></button></a>
+            <!--end modified by neha-->
         </div>
         <!--start modified by neha-->
         <div id="features">
