--- a/html/slider.html
+++ b/html/slider.html
@@ -16,7 +16,7 @@
       <button id = "rightArrow" class="right-arrow" onclick="plusDivs(1)"><i class="fa fa-angle-double-right"></i></button>
       <!-- questions section(sub container) -->
       <div class="slider">
-        <h1>What activities you like to do ?</h1>
+        <h1>Activity you are interested in </h1>
         <section class= "options">
           <!--Modified by rachel--><!-- Start Modified by neha-->
           <button class= "q1 selector" value="Hiking">Hiking</button>
@@ -38,23 +38,23 @@
          </section>
       </div>
     <div class="slider">
-     <h1>Select your income range ?</h1>
+     <h1>Please select your income range </h1>
      <section class= "options">
         <!--Modified by rachel-->
-       <button class= "q3 selector" value="10-50">10-50</button>
-       <button class= "q3 selector" value="50-100">50-100</button>
-       <button class= "q3 selector" value="100-150">100-150</button>
+       <button class= "q3 selector" value="10-50">10k-50k</button>
+       <button class= "q3 selector" value="50-100">50k-100k</button>
+       <button class= "q3 selector" value="100-150">100k-150k</button>
        <button class= "q3 selector" value="NA"> N/A </button>
         <!--end-->
      </section>
     </div>
     <div class="slider">
-      <h1> How often you use public transportion ?</h1>
+      <h1> How often do you use public transportion ?</h1>
       <section class= "options">
          <!--Modified by rachel-->
          <button class= "q4 selector" value="DAILY">DAILY</button>
-         <button class= "q4 selector" value="ONCE A WEEK">ONCE A WEEK</button>
-         <button class= "q4 selector" value="FEW DAYS IN A WEEK">FEW DAYS IN A WEEK</button>
+         <button class= "q4 selector" value="ONCE A WEEK">ONCE IN A WEEK</button>
+         <button class= "q4 selector" value="FEW DAYS IN A WEEK">MORE THAN ONCE A WEEK</button>
          <button class= "q4 selector" value="NA"> N/A </button>
          <!--end-->
       </section>
@@ -62,7 +62,7 @@
     <!-- end Modified by neha-->
     <!--start add by neha-->
     <div class="slider">
-      <h1> Do you want to submit?</h1>
+     <!-- <h1> Do you want to submit?</h1>-->
       <section class= "options">
         <a href="./suggestionsPage.html"><button class= "submit selector" value="submit">SUBMIT</button>
       </section>
