Linked java files to show output

--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -9,9 +9,14 @@
 
 <body>
 	<div>  <h2 class="suggestions">OUR SUGGESTIONS</h2> </div>
-    <div id='suggestedArea'>      
+    <div id='suggestedArea'>
+
     </div>
+    <!-- Start add by sirisha -->
+    <script type = "text/javascript" src = "../js/suggestRefer.js"></script>
+    <script type = "text/javascript" src = "../js/criterion.js"></script>
     <script type="text/javascript" src="../js/suggestions.js"></script>
+    <!-- end by sirisha -->
 </body>
 
 </html>
