--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <!--start modified by neha-->
         <div id="features">
             <div id="features-suggestion" class="feature">
-                <p>Fill our questionnaire and we will help you to find your neighborhood.
+                <p>Fill our questionnaire and we will help you find a suitable neighborhood.
                     <!--text & button Name modified by Rashmitha -->
                 </p>
                 <a href="html/slider.html">
@@ -84,13 +84,13 @@
                 </a>
             </div>
             <div id="features-find" class="feature">
-                <p>If you know the neighborhood find more about it.
+                <p>You can find more about a neighborhood if you are already familiar with it.
                     <!--text & button Name modified by Rashmitha -->
                 </p>
                 <button class="indexPageAction2">FIND A NEIGHBORHOOD</button>
             </div>
             <div id="features-comparation" class="feature">
-                <p>Compare two neighborhoods.
+                <p>You can compare two neighborhoods.
                     <!--text & button Name modified by Rashmitha -->
                 </p>
                 <button class="indexPageAction3">COMPARE NEIGHBORHOODS</button>
