--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+e<!DOCTYPE HTML>
 <html lang="en">
 
 <head>
@@ -61,8 +61,8 @@
         <div><img src="./image/seattle3.jpg" /></div>
         <div id="descr">
             <!--start modified by neha-->
-            <h2>Discover Your Dream Neighborhood</h2>
-            <h3>In Seattle</h3>
+            <h2>Discover your dream neighborhood in Seattle</h2>
+            <!--<h3>In Seattle</h3>-->
             <!--end modified by neha-->
         </div>
         <div id="start">
