change activity type

--- a/html/slider.html
+++ b/html/slider.html
@@ -19,10 +19,10 @@
         <h1>Activity you are interested in </h1>
         <section class= "options">
           <!--Modified by rachel--><!-- Start Modified by neha-->
-          <button class= "q1 selector" value="Hiking">Hiking</button>
-          <button class= "q1 selector" value="Swimming">Swimming</button>
-          <button class= "q1 selector" value="Travelling">Travelling</button>
-          <button class= "q1 selector" value="NA"> N/A </button>
+          <button class= "q1 selector" value="outdoor">Outdoor Activities</button>
+          <button class= "q1 selector" value="movies">Watching Movies</button>
+          <button class= "q1 selector" value="bar-hopping">Bar-Hopping</button>
+          <button class= "q1 selector" value="foodie">Trying Different Cuisine</button>
           <!--end-->
         </section>
       </div>
