set income value

--- a/html/slider.html
+++ b/html/slider.html
@@ -41,10 +41,10 @@
      <h1>Please select your income range </h1>
      <section class= "options">
         <!--Modified by rachel-->
-       <button class= "q3 selector" value="10-50">10k-50k</button>
-       <button class= "q3 selector" value="50-100">50k-100k</button>
-       <button class= "q3 selector" value="100-150">100k-150k</button>
-       <button class= "q3 selector" value="NA"> N/A </button>
+       <button class= "q3 selector" value="10-30">10-30(K)</button>
+       <button class= "q3 selector" value="30-60">30-60(K)</button>
+       <button class= "q3 selector" value="60-90">60-90(K)</button>
+       <button class= "q3 selector" value="90+">90+(K)</button>
         <!--end-->
      </section>
     </div>
