check in income and house price section

--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -5,12 +5,14 @@
     <title>Our Suggestions</title>
     <link rel="stylesheet" type="text/css" href="../css/suggestionsPage.css">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="../js/jquery.canvasjs.min.js"></script>
 </head>
 
 <body>
 	<div>  <h2 class="suggestions">OUR SUGGESTIONS</h2> </div>
     <div id='suggestedArea'>
-
+    <section id="incomeChartContainer" style="height: 300px; width: 100%;"></section>
+    <section id="housePriceChartContainer" style="height: 300px; width: 100%;"></section>
     </div>
     <!-- Start add by sirisha -->
     <script type = "text/javascript" src = "../js/suggestRefer.js"></script>
