Transportation scores uploaded.

--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -7,12 +7,18 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="../js/jquery.canvasjs.min.js"></script>
 </head>
-
 <body>
 	<div>  <h2 class="suggestions">OUR SUGGESTIONS</h2> </div>
     <div id='suggestedArea'>
     <section id="incomeChartContainer" style="height: 300px; width: 100%;"></section>
     <section id="housePriceChartContainer" style="height: 300px; width: 100%;"></section>
+    </div>
+    <!-- start by sirisha -->
+    <div id="transportation" style="height: 200px; width: 100%;float:left;">
+      <h1 style= "text-align:center"> Transportation Score</h1>
+      <div id="transportationContainer1" style="height: 200px; width: 30%; float:right"></div>
+      <div id="transportationContainer2" style="height: 200px; width: 30%;float:right"></div>
+      <div id="transportationContainer3" style="height: 200px; width: 30%;float:right"></div>
     </div>
     <!-- Start add by sirisha -->
     <script type = "text/javascript" src = "../js/suggestRefer.js"></script>
