--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -10,6 +10,7 @@
 <body>
 	<div>  <h2 class="suggestions">OUR SUGGESTIONS</h2> </div>
     <div id='suggestedArea'>
+    <section id="crimeContainer" style="height: 300px; width: 100%;"></section>
     <section id="incomeChartContainer" style="height: 300px; width: 100%;"></section>
     <section id="housePriceChartContainer" style="height: 300px; width: 100%;"></section>
     </div>
