--- a/html/header.html
+++ b/html/header.html
@@ -11,17 +11,17 @@
                 </div>
                 <div id="down-content">
                     <!--start edit by Rashmitha-->
-                    <a href="./slider.html">Suggestions</a>
-                    <a href="NA.html">Find by area</a>
-                    <a href="NA.html">Comparison</a>
+                    <a href="/html/slider.html">Suggestions</a>
+                    <a href="/html/NA.html">Find by area</a>
+                    <a href="/html/NA.html">Comparison</a>
                     <!--end edit by Rashmitha-->
                 </div>
             </div>
             <div id="down-content-desktop">
                 <!--start edit by Rashmitha-->
-                <a href="./slider.html">Suggestions</a>
-                <a href="NA.html">Find by area</a>
-                <a href="NA.html">Comparison</a>
+                <a href="/html/slider.html">Suggestions</a>
+                <a href="/html/NA.html">Find by area</a>
+                <a href="/html/NA.html">Comparison</a>
                 <!--end edit by Rashmitha-->
             </div>
         </nav>
