--- a/html/header.html
+++ b/html/header.html
@@ -1,7 +1,7 @@
  <header>
         <nav id="nav" class="rowLayout">
             <div>
-                <a href="index.html"><img src="../image/logo-1.jpg"></a>
+                <a href="/index.html"><img src="/image/logo-1.jpg"></a>
             </div>
             <div id="down">
                 <div id="down-icon">
