Update SuggestionsPage.html -Add Crime Graph

--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -38,6 +38,9 @@
             </div>
             <div id='suggestedArea' class="mobileLayout desktopLayout">
                 <div class="graphicsWrapper">
+                    <section id="crimeContainer" class="graphicsContainer"></section>
+                </div>
+                <div class="graphicsWrapper">
                     <section id="incomeChartContainer" class="graphicsContainer"></section>
                 </div>
                 <div class="graphicsWrapper">
