--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -1,3 +1,4 @@
+<!--Start by sirisha-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,21 +6,27 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Compare Page</title>
     <!-- common css styles -->
-    <link rel="stylesheet" type="text/css" href="./css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="./css/html-semantics.css" />
-    <link rel="stylesheet" type="text/css" href="./css/layout.css" />
-    <link rel="stylesheet" type="text/css" href="./css/brand.css" />
+      <link rel="stylesheet" type="text/css" href="../css/reset.css" />
+      <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
+      <link rel="stylesheet" type="text/css" href="../css/layout.css" />
+      <link rel="stylesheet" type="text/css" href="../css/brand.css" />
+      <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
     <!-- my custom css file -->
-    <link rel="stylesheet" type="text/css" href="./css/compareNeighborhoods.css">
+      <link rel="stylesheet" type="text/css" href="../css/compareNeighborhoods.css">
+      <script src="js/less.js" type="text/javascript"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+      <!-- Header Footer Load Script -->
+      <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
   </head>
   <body>
+  <div id='header'></div>
   <div id="mainDiv">
       <h1>Let's Compare</h1>
       <h3>Enter the neighborhoods you like to compare</h3>
       <div class="compareContainer">
           <!-- left section -->
           <section class="comparison" id="leftNeighborhood">
-              <img src="./image/siriSeattle.jpg" alt="">
+              <img src="../image/downtown.jpg" alt="">
               <input type="text" list="neighborhoods1" name="neighbor_names" placeholder="Enter a neighborhood">
               <datalist id="neighborhoods1">
                   <option value="University District">
@@ -38,7 +45,7 @@
           </section>
           <!-- Right section -->
           <section class="comparison" id="rightNeighborhood">
-              <img src="./image/siriSeattle2.jpg" alt="">
+              <img src="../image/uwbothell.jpg" alt="">
               <input type="text" list="neighborhoods2" name="neighbor_names2" placeholder="Enter a neighborhood">
               <datalist id="neighborhoods2">
                   <option value="University District">
@@ -58,3 +65,4 @@
   </div>
   </body>
 </html>
+<!--end by sirisha-->
