Updating index.html & index,layout,brand less files

--- a/index.html
+++ b/index.html
@@ -5,94 +5,39 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Locale Finder</title>
-    <!--start add by neha-->
+
     <link rel="stylesheet" type="text/css" href="./css/reset.css" />
     <link rel="stylesheet" type="text/css" href="./css/html-semantics.css" />
     <link rel="stylesheet" type="text/css" href="./css/layout.css" />
-    <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <link rel="stylesheet" type="text/css" href="./css/brand.css" />
-    <!--end add by neha-->
-    <!--start add by rachel-->
-    <link rel="stylesheet/less" type="text/css" href="less/index.less" />
+
+    <link rel="stylesheet" type="text/css" href="./css/index.css" />
+
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
-    <script src="js/less.js" type="text/javascript"></script>
-    <!--end add by rachel-->
-    <!--start add by neha-->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="./js/loadHeaderFooter.js"></script>
-    <!--end add by neha-->
+
 </head>
 
 <body>
-    <!-- modified by neha -->
+
     <div id='header'></div>
-    <!-- end modified by neha -->
-    <!--<h2>Discover Your Locale  </h2> -->
-    <!--<button class="b-quesiotn"><h2>GET STARTED</h2></button> -->
-    <!--start add by rachel-->
-    <!-- Rashmitha-->
-    <div id="indexMain">
-        <div>
-            <img src="./image/seattle-backdrop.jpg" />
-            <div id="descr" class="rowLayout">
-                <!--start modified by neha-->
-                <div>
-                    <h2>Discover Your Dream Neighborhood In Seattle</h2>
-                </div>
-                <div>
-                    <a href="./html/slider.html">
-                        <button><span>GET STARTED</span></button>
-                    </a>
-                </div>
-                <!--end modified by neha-->
-            </div>
-        </div>
-        <!--start modified by neha-->
-        <div id="features">
-            <div id="features-suggestion" class="feature">
-                <center>
-                    <a href="html/slider.html">
-                        <img src="./image/suggest.jpg" />
-                    </a>
-                </center>
-                <p>Fill our questionnaire and we will help you find a suitable neighborhood.
-                    <!--text & button Name modified by Rashmitha -->
-                </p>
-                <a href="./html/slider.html">
-                    <button><span>SUGGEST</span></button>
-                </a>
-            </div>
-            <div id="features-find" class="feature">
-                <center>
-                    <a href="html/slider.html">
-                        <img src="./image/find.jpg" />
-                    </a>
-                </center>
-                <p>You can find more about a neighborhood if you are already familiar with it.
-                    <!--text & button Name modified by Rashmitha -->
-                </p>
-                <a href="./html/slider.html">
-                    <button><span>FIND</span></button>
-                </a>
-            </div>
-            <div id="features-comparation" class="feature">
-                <center>
-                    <a href="html/slider.html">
-                        <img src="./image/compare.jpg" />
-                    </a>
-                </center>
-                <p>You can compare two neighborhoods.
-                <br/>
-                    <!--text & button Name modified by Rashmitha -->
-                </p>
-                <a href="./html/slider.html">
-                    <button><span>COMPARE</span></button>
-                </a>
-            </div>
-            <!--end modified by neha-->
+
+    <div id="indexMain" class='bg-main grayscale-min display-main'>
+        <div class="position-left lf-text-white text-lighter" style="padding: 48px">
+            <span class="text-xxxlarge">Find Your Dream Neighborhood</span>
+            <br/>
+            <span class="text-large">We care what matters to you</span>
+            <p><a href="" class="lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large">GET STARTED</a></p>
         </div>
     </div>
-    <!--end add by rachel-->
+
+
+    </div>
+
     <div id='footer'></div>
     <script type="text/javascript" src="./js/index.js"></script>
 </body>
