Updating header and footer html

--- a/html/header.html
+++ b/html/header.html
@@ -1,7 +1,8 @@
  <header>
         <nav id="nav" class="rowLayout">
+            <div><span class="text-xxxlarge">LF</span></div>
             <div>
-                <a href="/index.html"><img src="/image/logo-1.jpg"></a>
+                <a href="/index.html" class="lf-button header-link wide lf-margin-top-xl">LOCALE FINDER</a>
             </div>
             <div id="down">
                 <div id="down-icon">
@@ -17,11 +18,17 @@
                     <!--end edit by Rashmitha-->
                 </div>
             </div>
-            <div id="down-content-desktop">
+            <div id="down-content-desktop" class="rowLayout">
                 <!--start edit by Rashmitha-->
-                <a href="/html/slider.html">Suggestions</a>
-                <a href="/html/NA.html">Find by area</a>
-                <a href="/html/NA.html">Comparison</a>
+                <a href="/html/NA.html" class="lf-button header-link position-right lf-margin-top-xl">
+                    <i class="fa fa-balance-scale lf-hover-opacity "></i>COMPARE
+                </a>
+                <a href="/html/NA.html" class="lf-button header-link position-right lf-margin-top-xl">
+                    <i class="fa fa-search lf-hover-opacity "></i>FIND
+                </a>
+                <a href="/html/slider.html" class="lf-button header-link position-right lf-margin-top-xl" >
+                    <i class="fa fa-lightbulb-o lf-hover-opacity "></i>SUGGEST
+                </a>
                 <!--end edit by Rashmitha-->
             </div>
         </nav>
