--- a/html/footer.html
+++ b/html/footer.html
@@ -1,6 +1,13 @@
 <!--start add by neha-->
 <footer>
-    <p>&copy; Copyright</p>
-    <!--<p>About us:</p>-->
+    <div class="rowLayout" style="justify-content: space-between">
+        <div>&copy; Copyright 2017</div>
+        <div class="lf-text-grey" style="padding:0px 0px;">
+            <i class="fa fa-facebook-official lf-hover-opacity "></i>
+            <i class="fa fa-instagram lf-hover-opacity "></i>
+            <i class="fa fa-twitter lf-hover-opacity "></i>
+            <i class="fa fa-linkedin lf-hover-opacity "></i>
+        </div>
+    </div>
 </footer>
 <!--end add by neha-->
