--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="./js/loadHeaderFooter.js"></script>
@@ -34,12 +36,44 @@
             <p><a href="" class="lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large">GET STARTED</a></p>
         </div>
     </div>
-
+    <!-- start by sirisha -->
+    <div id="optionsSection">
+        <h2>Short description about the page</h2>
+        <div class="card-group">
+            <div class="card">
+                 <img class="card-img-top" src="./image/seattle.jpg" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title">New to Seattle!</h4>
+                    <p class="card-text"> Welcome to Evergreen State. We would love to suggest top 3 areas which is best fit for you. </p>
+                </div>
+                <button class="cardButton">START</button>
+            </div>
+            <div class="card">
+                 <img class="card-img-top" src="./image/downtown.jpg" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title">Already know the neighborhood you like</h4>
+                    <p class="card-text">That's awesome! Let us help you explore more on your choice of neighborhood.</p>
+                </div>
+                <button class="cardButton">START</button>
+            </div>
+            <div class="card">
+                 <img class="card-img-top" src="./image/southLake.jpg" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title">Would like to compare neighborhoods ?</h4>
+                    <p class="card-text">Confused which one to choose. Compare with respect to each criteria and make the right choice.</p>
+                </div>
+                <button class="cardButton">START</button>
+            </div>
+        </div>
+    </div>
+    <!-- end by sirisha -->
 
     </div>
 
     <div id='footer'></div>
-    <script type="text/javascript" src="./js/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>    <script type="text/javascript" src="./js/index.js"></script>
 </body>
 
 </html>
